// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create component for 1 expense 1`] = `
<div>
  <h1>
    Viewing 1 expense totalling $13.41
  </h1>
</div>
`;

exports[`should create component for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 3 expenses totalling $1,322.41
  </h1>
</div>
`;
